# langchain-practice

01_overview/: main.py  pyproject.toml
01_overview/src/: 01_create_an_agent.ipynb
02_release_notes/: what's_new_in_v1.md
03_migration guide/: langchain_v1_migration_guide.md
04_core_components/agents/: README.md  dynamic_model.md
04_core_components/agents/src/dynamic_model/: 01_dynamic_model.ipynb
04_core_components/agents/src/tools/: 01_tools.ipynb
04_core_components/messages/: README.md  main.py  pyproject.toml
04_core_components/short_term_memory/: main.py  pyproject.toml  short_term_memory.ipynb
04_core_components/tools/: pyproject.toml
04_core_components/tools/src/: tools.md
core_components/agents/: pyproject.toml
core_components/agents/src/: dynamic_model.ipynb  dynamic_model_error_recovery.py
core_components/agents/src/advanced_concepts/: 01_structured_output.ipynb  02_memory.ipynb
core_components/agents/src/tools/: 02_tool_error_handling.ipynb
core_components/messages/src/: messages.ipynb  messages.md
core_components/models/: pyproject.toml
core_components/models/src/: models.ipynb  models.md
core_components/tools/src/: tools.ipynb
langchain_overview/src/: 01_create_an_agent.ipynb
